--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-The student grievance management focuses mainly on registering complaints and made available for counsellor to accept and solve the complaints and punish a suitable punishment for the
+# The student grievance management focuses mainly on registering complaints and made available for counsellor to accept and solve the complaints and punish a suitable punishment for the
 abuser. The project contains student, counsellor and admin panel. The admin panel can add or delete student or counsellor.
